# gbe

./: .gitignore  AGENTS.md  Cargo.toml  GUIDE_SECURITY.md  README.md
.beads/export-state/: 9d87b877f306ad3c.json  a9ef8cb952b2ea56.json
.claude/: settings.local.json
crates/adapter/examples/: automated_e2e.rs  e2e_test.rs
crates/adapter/src/: main.rs
crates/architect/: Cargo.toml
crates/architect/src/: lib.rs  roles.rs
crates/buffer/benches/: buffer_bench.rs
crates/client/examples/: demo_client.rs
crates/client/src/: main.rs
crates/cryptum/: .gitignore  AGENTS.md  Cargo.toml  ark-watch.sh  start-cryptum.sh  test-watch.sh
crates/cryptum/config/: weston.ini
crates/cryptum/config/sway/: config
crates/cryptum/docs/: ROADMAP.md  cargo_example.toml  naming.md  rabbithole_notes.md  vnc-migration-notes.md
crates/cryptum/src/: main.rs  protocol.rs
crates/frame/: Cargo.toml
crates/frame/src/: authority.rs  capability.rs  condition.rs  config.rs  error.rs  flow.rs  frame.rs  geas.rs  identity.rs  interface.rs  lib.rs  packet.rs  rite.rs  trace.rs  writ.rs
crates/geas-sim/: Cargo.toml
crates/geas-sim/examples/: basic_sim.rs  branching.rs  composition.rs  honesty.rs  scenario_matrix.rs
crates/geas-sim/src/: builder.rs  engine.rs  geas.rs  imprint.rs  lib.rs  matcher.rs  node.rs
crates/jobs-domain/src/: capabilities.rs  lib.rs  lifecycle.rs  subjects.rs
crates/nexus/: Cargo.toml
crates/nexus-bridge/: Cargo.toml
crates/nexus-bridge/src/: bridge.rs  handler.rs  lib.rs  route.rs  tests.rs
crates/nexus-redis/src/: consumer.rs
crates/nexus/src/: emitter.rs  envelope.rs  lib.rs  payload.rs  writ.rs
crates/operative/: Cargo.toml
crates/operative/src/: driver.rs  lib.rs  llm_client.rs  main.rs  molecule_operative.rs
crates/operative/tests/: shell_runner_test.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: driver.rs  lib.rs  oracle.rs  writ_handler.rs
crates/primer/: Cargo.toml
crates/primer/src/: cell.rs  content.rs  content_display.rs  feed.rs  imprint.rs  lib.rs  page.rs
crates/primer/src/imprints/: capabilities.rs  collect.rs  envelope.rs  gather.rs  generic.rs  mod.rs  packet.rs  triage.rs  writ.rs  writ_response.rs
crates/primer/tests/: basics.rs  imprints.rs
crates/protocol/examples/: protocol_demo.rs
crates/protocol/src/: lib.rs
crates/proxy/src/: main.rs
crates/router/examples/: test_client.rs
crates/router/src/: main.rs
crates/router/tests/: e2e_full_stack.rs  e2e_multi_client.rs  integration_test.rs
crates/sentinel/: Cargo.toml
crates/sentinel/src/: handler.rs  health.rs  lib.rs  sentinel.rs  writ_handler.rs
crates/sentinel/src/vsock/: listener.rs  protocol.rs
crates/sentinel/tests/: bridge_integration.rs  vsock_relay.rs
crates/tap/: Cargo.toml
crates/tap/src/: main.rs  mediatronic.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: lib.rs
crates/watcher/: Cargo.toml
crates/watcher-tui/: Cargo.toml
crates/watcher-tui/src/: main.rs
crates/watcher/src/: archiver.rs  lib.rs  watcher.rs  writ_handler.rs
crates/watcher/tests/: integration.rs
docs/: 10000-foot-view.md  domain-schema-template.md  ecumene-roles.md  kv-state-store.md  message-broker-notes.md  naming-themes.md  runner-design.md  subject-hierarchy.md  system-overview.md  transport-abstraction.md  watcher-archiver.md
docs/components/: display.md  envoy.md  job-pipeline.md  status.md
poc/: Cargo.toml  README.md  poc-operative.sh  poc-sentinel.sh  run-poc.sh  stop-poc.sh
poc/operative/: Cargo.toml
poc/operative/src/: main.rs
poc/sentinel/: Cargo.toml
poc/sentinel/src/: main.rs
