[workspace]
resolver = "2"
members = [
    # Transport + state
    "crates/nexus",
    "crates/nexus-memory",
    "crates/nexus-bridge",
    "crates/nexus-redis",
    "crates/state-store",
    "crates/state-store-redis",
    "crates/jobs-domain",

    # Orchestration
    "crates/oracle",
    "crates/operative",
    "crates/sentinel",
    "crates/watcher",
    "crates/watcher-tui",

    # Envoy (tool composition)
    "crates/protocol",
    "crates/router",
    "crates/adapter",
    "crates/buffer",
    "crates/client",
    "crates/proxy",

    # Display
    "crates/cryptum",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["GrayBear <bear@graybear.io>"]
license = "MIT"
repository = "https://github.com/graybear-io/gbe"

[workspace.dependencies]
# Internal crates
gbe-nexus = { path = "crates/nexus" }
gbe-nexus-memory = { path = "crates/nexus-memory" }
gbe-nexus-bridge = { path = "crates/nexus-bridge" }
gbe-nexus-redis = { path = "crates/nexus-redis" }
gbe-state-store = { path = "crates/state-store" }
gbe-state-store-redis = { path = "crates/state-store-redis" }
gbe-jobs-domain = { path = "crates/jobs-domain" }
gbe-oracle = { path = "crates/oracle" }
gbe-operative = { path = "crates/operative" }
gbe-sentinel = { path = "crates/sentinel" }
gbe-watcher = { path = "crates/watcher" }
gbe-protocol = { path = "crates/protocol" }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Types
bytes = "1"
ulid = "1"

# Encoding
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Redis
redis = { version = "0.29", features = ["tokio-comp", "streams", "connection-manager"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Testing
tempfile = "3"
wiremock = "0.6"
