[package]
name = "gbe-architect"
description = "Role definitions and standing geas for GBE nodes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_yaml = "0.9"
