[package]
name = "frame"
description = "Shared primitives for the ecumene — identity, framing, capabilities, authority flow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ulid = { workspace = true, features = ["serde"] }
thiserror.workspace = true
dirs = "6"

[dev-dependencies]
tempfile.workspace = true
