[package]
name = "geas-sim"
description = "Exploration simulator for the rite-based geas model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
