[package]
name = "gbe-operative"
description = "Task executor for GBE — shell, HTTP, LLM, molecule operatives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame.workspace = true
gbe-jobs-domain.workspace = true
gbe-nexus.workspace = true
gbe-oracle.workspace = true
tokio.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
wiremock.workspace = true
