[package]
name = "primer"
description = "Presentation primitives for the ecumene — cells, pages, feeds, typed content"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ulid = { workspace = true, features = ["serde"] }
