[package]
name = "gbe-sentinel"
description = "Machine-line barrier node — mesh manifests to ecumene imprints, mandate receipt, payload delivery"
# STATUS: REWRITE — current impl is VM-lifecycle-focused (slots, profiles, VmState).
# Needs redesign around mesh-barrier model: read mesh manifests, create imprints,
# receive mandates, provision payloads. See ecosystem/gbe-bootstrap-problem.md.
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame.workspace = true
gbe-architect.workspace = true
gbe-jobs-domain.workspace = true
gbe-nexus.workspace = true
gbe-nexus-bridge.workspace = true
gbe-state-store.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
gbe-nexus-memory.workspace = true
gbe-nexus-redis.workspace = true
gbe-state-store-redis.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
