[package]
name = "gbe-tap"
description = "Bus tap — subscribe to ecosystem subjects, inspect packets and frames in real time"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tap"
path = "src/main.rs"

[dependencies]
frame.workspace = true
primer.workspace = true
gbe-architect.workspace = true
gbe-nexus.workspace = true
gbe-nexus-memory.workspace = true
gbe-nexus-redis.workspace = true
gbe-jobs-domain.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
