[package]
name = "gbe-test-harness"
description = "Integration test scaffolding for GBE writ flow — response collection, send-and-wait, capability discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame.workspace = true
gbe-nexus.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
